<resources>
    <string name="app_name">Lucroniu</string>
    <string name="dismiss">Dismiss</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="camera_permission_rationale">Camera Permission Request &#10;
        Our app requires access to your device\'s camera to enable you to take pictures directly within the app.
        We value your privacy and are committed to protecting your data.
        The camera will only be used for taking pictures and not for any other purpose.&#10;
        Thank you for trusting us!</string>
    <string name="notification_permission_rationale">
        Notification Permission Request&#10;
        Our app needs permission to send you task-related notifications.
        These will help you stay on top of deadlines, receive task reminders, and get progress updates.
        You can manage your notification preferences anytime in the app settings.&#10;
        Thank you!</string>
    <string name="alarm_permission_rationale">
        Alarm Permission Request&#10;
        Our app needs permission to set alarms for you.
        This will help you stay on schedule and never miss important events or deadlines.
        You can manage your alarm settings anytime in the app.&#10;
        Thank you!</string>
    <string name="long_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean nec ante hendrerit, semper neque sit amet, hendrerit augue. Praesent eu leo tincidunt enim vehicula varius. Quisque egestas tellus eget erat gravida suscipit. Praesent congue, lacus ut lacinia volutpat, mauris neque consequat turpis, eu facilisis purus enim at ex. Sed ut elit nec sapien condimentum porttitor. Suspendisse fermentum nisi eget faucibus iaculis. In hac habitasse platea dictumst. Phasellus non imperdiet massa. Quisque fringilla commodo erat nec sollicitudin. Etiam ut tempor neque, quis suscipit libero. Duis lectus dui, consectetur sagittis erat eget, consectetur dictum lacus. Donec pellentesque sapien eu metus tincidunt, quis mattis eros eleifend. Etiam erat enim, hendrerit eu odio non, venenatis mattis enim. Suspendisse erat dolor, eleifend sit amet ullamcorper in, vehicula vel ipsum. Morbi fringilla maximus nunc, id dignissim velit ornare ut. Sed rutrum sodales ligula, in euismod massa elementum vel. Pellentesque finibus at lectus eget aliquam. Sed volutpat magna augue, in placerat tellus lacinia sit amet. Aliquam blandit dui eget velit varius rutrum. Vestibulum eros sem, hendrerit eu mauris id, viverra tristique risus. Pellentesque lobortis auctor ante, ac vestibulum lorem luctus eget. Fusce at elit id enim hendrerit hendrerit. Sed sit amet turpis sed tortor viverra luctus. Vivamus et nunc ipsum. Nullam at sodales magna. Cras metus metus, sollicitudin eu ex at, lacinia gravida ex. Cras ac elementum ex. Duis vitae sapien eget sapien egestas pretium non fermentum ipsum. Morbi egestas nibh sit amet suscipit lacinia. Nullam sit amet odio ultrices, tempus eros eu, vehicula libero. In hac habitasse platea dictumst. Mauris fringilla finibus consectetur. Cras in sem vel sapien condimentum consequat. Donec eu enim vitae mi tempus mattis. Praesent sollicitudin fermentum imperdiet. Aenean ornare lorem et dui egestas, a luctus turpis semper. Vestibulum a tellus mollis metus venenatis bibendum ut ac tellus. Nulla faucibus, ante laoreet sollicitudin egestas, sem justo congue sem, ut finibus felis velit a elit. Nulla maximus sem at ipsum porta, et congue dui egestas. Proin tristique ex sapien, vulputate tincidunt magna sagittis vitae. Morbi fringilla, massa a auctor pharetra, leo libero consequat tellus, in feugiat felis lectus ut tellus. Suspendisse vel viverra dui. Suspendisse aliquet erat eu ultricies sodales. Sed id vulputate elit. Aliquam vitae felis nec tortor cursus vestibulum nec in mi. Phasellus tincidunt neque ac nibh viverra, eu dignissim nisl viverra. Aenean cursus ante libero, a interdum odio auctor id. Ut ac lacus ut justo ullamcorper tempor. Aliquam tincidunt ultricies imperdiet. Praesent vel rutrum metus, a molestie ligula. Phasellus vulputate accumsan leo, commodo elementum nunc feugiat ac. Mauris tempus mi ut lacus congue dignissim. Donec vitae tortor lectus. Mauris magna quam, ullamcorper sed aliquet sed, faucibus a neque. Sed cursus nulla a maximus aliquet. In hac habitasse platea dictumst. Nullam a porta ipsum. Praesent quis aliquam magna, a interdum augue. Quisque quis hendrerit nisl, quis placerat nunc. Etiam iaculis elit vitae sem dignissim aliquet. Proin id quam accumsan, tincidunt mi vel, pulvinar felis. Nam porttitor non nunc et scelerisque. Suspendisse luctus lacus sed odio molestie, et imperdiet dui facilisis.</string>
    <string name="set_time_button">Set Time</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="add_task">Add Task</string>
</resources>